--- a/art.css
+++ b/art.css
@@ -5,6 +5,7 @@ body {
     background-color: black;
     background: 1px solid black;
 }
+
 .container {
     display: flex;
     align-items: center;
@@ -12,22 +13,26 @@ body {
     margin: 0;
     text-align: center;
 }
-.contain{
+
+.contain {
     padding-top: 60px;
 }
-.Welcome{
+
+.Welcome {
     color: white;
     font-size: 50px;
     font-weight: 700;
     text-align: center;
 }
-.text{
+
+.text {
     color: #8eb508;
     font-size: 50px;
     font-weight: 700;
     text-align: center;
 }
-.Sortmethod{
+
+.Sortmethod {
     background-color: white;
     color: #8eb508;
     padding: 10px;
@@ -37,24 +42,29 @@ body {
     font-style: sans-serif;
     border-radius: 5px;
 }
-.Arraycontainer{
+
+.Arraycontainer {
     padding-top: 20px;
 }
-.Array{
+
+.Array {
     color: #8eb508;
     font-size: 25px;
     font-weight: 600;
 }
-.inputContainer{
+
+.inputContainer {
     padding-top: 20px;
     align-items: center;
     padding-bottom: 40px;
 }
-.method{
+
+.method {
     border-radius: 5px;
     align-items: center;
     padding: 10px;
 }
+
 button {
     align-items: center;
     border: none;
@@ -67,10 +77,12 @@ button {
     border-radius: 5px;
     transition: background 0.6s;
 }
+
 button:hover {
     background-color: white;
     color: #000;
 }
+
 .bars-container {
     display: flex;
     align-items: flex-end;
@@ -82,67 +94,90 @@ button:hover {
     border-radius: 5px;
     border-width: 5px;
 }
+
 .bar {
-    width: 20px;
+    width: 23px;
     background-color: teal;
     margin: 0 3px;
     transition: height 0.3s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
 }
-.moreFunction{
+
+.bar-number {
+    color: white;
+    font-size: 14px;
+    margin-top: 5px;
+}
+
+.moreFunction {
     padding-top: 30px;
 }
-.ImportanceBox{
+
+.ImportanceBox {
     padding-top: 40px;
     align-items: center;
 }
-.Algorithm{
+
+.Algorithm {
     color: white;
     font-size: 50px;
     font-weight: 700;
     padding-top: 50px;
 }
-.importantText{
+
+.importantText {
     font-size: 20px;
     color: #8eb508;
     font-weight: 200;
     padding-top: 5px;
 }
-.para{
+
+.para {
     font-size: 16px;
     color: white;
     padding: 20px;
     border: 1px solid #8eb508;
 }
-.Info{
+
+.Info {
     height: auto;
     padding-bottom: 30px;
     margin-top: 90px;
 }
-.footerHead{
+
+.footerHead {
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
 }
-.name{
+
+.name {
     font-family: 10px;
     font-weight: 200;
     font-style: italic;
 }
-.listdata{
+
+.listdata {
     font-size: 15px;
     color: #fff;
     font-weight: 700;
 }
-.head{
+
+.head {
     font-size: 25px;
     color: #8eb508;
     font-weight: 700;
 }
-li{
+
+li {
     text-align: left;
 }
-a{
+
+a {
     text-decoration: none;
     color: white;
 }
